[gd_scene load_steps=5 format=3 uid="uid://ctrd2c74fom4t"]

[ext_resource type="Script" path="res://src/common/debug/debug_panel.gd" id="1_ihtat"]
[ext_resource type="PackedScene" uid="uid://035aqb1motrn" path="res://src/narrative/debug/sequence_state.tscn" id="2_2nxyc"]
[ext_resource type="PackedScene" uid="uid://cl8wuollxsu6k" path="res://src/drinks/debug/make_drink.tscn" id="3_u4ktp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvt4n"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="DebugPanel" type="PanelContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_kvt4n")
script = ExtResource("1_ihtat")
StorySequenceInfoScene = ExtResource("2_2nxyc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HFlowContainer2" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicTensionToggle" type="Button" parent="VBoxContainer/HFlowContainer2"]
layout_mode = 2
focus_mode = 0
text = "Swap Music"

[node name="CreateDrink" type="Button" parent="VBoxContainer/HFlowContainer2"]
layout_mode = 2
focus_mode = 0
text = "Win Game
"

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GameOver" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
text = "Game Over
"

[node name="WinGame" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
text = "Win Game
"

[node name="Sequences" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sequences"

[node name="SequenceCategory" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
selected = 0
item_count = 2
popup/item_0/text = "All Sequences"
popup/item_1/text = "Ready Sequences"
popup/item_1/id = 1

[node name="SequenceList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_height = true
item_count = 1

[node name="SequenceInfo" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MakeDrink" parent="." instance=ExtResource("3_u4ktp")]
unique_name_in_owner = true

[connection signal="pressed" from="VBoxContainer/HFlowContainer2/MusicTensionToggle" to="." method="_on_music_tension_toggle_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer2/CreateDrink" to="." method="_on_create_drink_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/GameOver" to="." method="_on_game_over_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/WinGame" to="." method="_on_win_game_pressed"]
[connection signal="item_selected" from="VBoxContainer/SequenceCategory" to="." method="_on_sequence_category_item_selected"]
[connection signal="item_selected" from="VBoxContainer/SequenceList" to="." method="_on_sequence_list_item_selected"]
